test/run-pass/struct_typedef_init.c
struct T {
    int a;
    int b;
};

typedef struct T T2;

T2* t2 = 0;

int main() {}

