test/compile-fail/incorrect_function_call.c

int main() {
	int a = 0;

	/* call a like function pointer */
	a();
}
